--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-picker/picker": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-top-tabs": "^6.0.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "date-fns": "^2.23.0",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-modal-datetime-picker": "^11.0.0",
+    "react-native-pager-view": "^5.4.1",
     "react-native-paper": "^4.9.2",
     "react-native-radio-buttons-group": "^2.2.5",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
     "yup": "^0.32.9"
   },
